some minor improvements